--- a/login.html
+++ b/login.html
@@ -5,10 +5,88 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link rel="stylesheet" href="./assets/lib/layui/css/layui.css">
+  <link rel="stylesheet" href="./assets/css/login.css">
 </head>
 
 <body>
+  <!-- 头部logo区域 -->
+  <div class="layui-main">
+    <img src="/code/assets/images/logo.png" alt="">
+  </div>
 
+
+  <!-- 登陆注册区域 -->
+  <div class="loginAndRegBox">
+    <div class="title-box"></div>
+    <!-- 登陆的div -->
+    <div class="login-box">
+      <!-- 登陆的表单 -->
+      <form class="layui-form" action="" id="form_login">
+        <!-- 用户名 -->
+        <div class="layui-form-item">
+          <i class="layui-icon layui-icon-username"></i>
+          <input type="text" name="username" lay-verify="required" autocomplete="off" placeholder="请输入用户名"
+            class="layui-input">
+        </div>
+        <!-- 密码  -->
+        <div class="layui-form-item">
+          <i class="layui-icon layui-icon-password"></i>
+          <input type="password" name="password" lay-verify="required|pwd" autocomplete="off" placeholder="请输入密码"
+            class="layui-input">
+        </div>
+        <!-- 登陆按钮 -->
+        <div class="layui-form-item">
+          <button class="layui-btn layui-btn-fluid layui-btn-normal" lay-submit>登陆</button>
+        </div>
+        <div class="layui-form-item links">
+          <a href="javascript:;" id="link_red">去注册账号</a>
+        </div>
+      </form>
+    </div>
+
+
+    <!-- 注册的div -->
+    <div class="reg-box">
+      <!-- 注册的表单 -->
+      <form class="layui-form" id="form_reg">
+        <!-- 用户名 -->
+        <div class="layui-form-item">
+          <i class="layui-icon layui-icon-username"></i>
+          <input type="text" name="username" lay-verify="required" autocomplete="off" placeholder="请输入用户名"
+            class="layui-input">
+        </div>
+        <!-- 密码  -->
+        <div class="layui-form-item">
+          <i class="layui-icon layui-icon-password"></i>
+          <input type="password" name="password" lay-verify="required|pwd" autocomplete="off" placeholder="请输入密码"
+            class="layui-input">
+        </div>
+        <!-- 密码确认框 -->
+        <div class="layui-form-item">
+          <i class="layui-icon layui-icon-password"></i>
+          <input type="password" name="repassword" lay-verify="required|pwd|repwd" autocomplete="off"
+            placeholder="再次确认密码" class="layui-input">
+        </div>
+        <!-- 注册按钮 -->
+        <div class="layui-form-item">
+          <button class="layui-btn layui-btn-fluid layui-btn-normal" lay-submit>注册按钮</button>
+        </div>
+        <div class="layui-form-item links">
+          <a href="javascript:;" id="link_login">去登陆</a>
+        </div>
+      </form>
+
+    </div>
+  </div>
+  <!-- 导入layui的js文件 -->
+  <script src="./assets/lib/layui/layui.all.js"></script>
+  <!-- 导入jQuery -->
+  <script src="/code/assets/lib/jquery.js"></script>
+  <!-- 导入自己封装的baseAPI.js -->
+  <script src="./assets/js/baseAPI.js"></script>
+  <!-- 导入自己的javas脚本 -->
+  <script src="/code/assets/js/login.js"></script>
 </body>
 
 </html>
